// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor integration OpenAPI 3.2.0 new features should refract all new 3.2.0 features 1`] = `
(OpenApi3_2Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (PathsElement
      (MemberElement
        (StringElement)
        (PathItemElement
          (MemberElement
            (StringElement)
            (OperationElement
              (MemberElement
                (StringElement)
                (StringElement))
              (MemberElement
                (StringElement)
                (ResponsesElement
                  (MemberElement
                    (StringElement)
                    (ResponseElement
                      (MemberElement
                        (StringElement)
                        (StringElement))))))))
          (MemberElement
            (StringElement)
            (OperationElement
              (MemberElement
                (StringElement)
                (StringElement))
              (MemberElement
                (StringElement)
                (StringElement))
              (MemberElement
                (StringElement)
                (RequestBodyElement
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (MediaTypeElement
                          (MemberElement
                            (StringElement)
                            (SchemaElement
                              (MemberElement
                                (StringElement)
                                (StringElement))
                              (MemberElement
                                (StringElement)
                                (ObjectElement
                                  (MemberElement
                                    (StringElement)
                                    (SchemaElement
                                      (MemberElement
                                        (StringElement)
                                        (StringElement))))))))))))))
              (MemberElement
                (StringElement)
                (ResponsesElement
                  (MemberElement
                    (StringElement)
                    (ResponseElement
                      (MemberElement
                        (StringElement)
                        (StringElement))))))))
          (MemberElement
            (StringElement)
            (ObjectElement
              (MemberElement
                (StringElement)
                (ObjectElement
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (ObjectElement
                          (MemberElement
                            (StringElement)
                            (StringElement))))))))))
          (MemberElement
            (StringElement)
            (ArrayElement
              (ParameterElement
                (MemberElement
                  (StringElement)
                  (StringElement))
                (MemberElement
                  (StringElement)
                  (StringElement))
                (MemberElement
                  (StringElement)
                  (SchemaElement
                    (MemberElement
                      (StringElement)
                      (StringElement))
                    (MemberElement
                      (StringElement)
                      (ObjectElement
                        (MemberElement
                          (StringElement)
                          (SchemaElement
                            (MemberElement
                              (StringElement)
                              (StringElement))))
                        (MemberElement
                          (StringElement)
                          (SchemaElement
                            (MemberElement
                              (StringElement)
                              (StringElement)))))))))))))))
  (MemberElement
    (StringElement)
    (ComponentsElement
      (MemberElement
        (StringElement)
        (ObjectElement
          (MemberElement
            (StringElement)
            (SchemaElement
              (MemberElement
                (StringElement)
                (StringElement))
              (MemberElement
                (StringElement)
                (ObjectElement
                  (MemberElement
                    (StringElement)
                    (SchemaElement
                      (MemberElement
                        (StringElement)
                        (StringElement))))
                  (MemberElement
                    (StringElement)
                    (SchemaElement
                      (MemberElement
                        (StringElement)
                        (StringElement))))))))))
      (MemberElement
        (StringElement)
        (ObjectElement
          (MemberElement
            (StringElement)
            (MediaTypeElement
              (MemberElement
                (StringElement)
                (SchemaElement
                  (MemberElement
                    (StringElement)
                    (StringElement))))))
          (MemberElement
            (StringElement)
            (MediaTypeElement
              (MemberElement
                (StringElement)
                (SchemaElement
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (SchemaElement
                          (MemberElement
                            (StringElement)
                            (StringElement))))
                      (MemberElement
                        (StringElement)
                        (SchemaElement
                          (MemberElement
                            (StringElement)
                            (StringElement)))))))))))))))
`;

exports[`refractor integration OpenAPI 3.2.0 new features should support additionalOperations 1`] = `
(OpenApi3_2Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (PathsElement
      (MemberElement
        (StringElement)
        (PathItemElement
          (MemberElement
            (StringElement)
            (ObjectElement
              (MemberElement
                (StringElement)
                (ObjectElement
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (ObjectElement
                          (MemberElement
                            (StringElement)
                            (StringElement))))))))
              (MemberElement
                (StringElement)
                (ObjectElement
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (ObjectElement
                          (MemberElement
                            (StringElement)
                            (StringElement)))))))))))))))
`;

exports[`refractor integration OpenAPI 3.2.0 new features should support all features combined 1`] = `
(OpenApi3_2Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (PathsElement
      (MemberElement
        (StringElement)
        (PathItemElement
          (MemberElement
            (StringElement)
            (OperationElement
              (MemberElement
                (StringElement)
                (StringElement))
              (MemberElement
                (StringElement)
                (ResponsesElement
                  (MemberElement
                    (StringElement)
                    (ResponseElement
                      (MemberElement
                        (StringElement)
                        (StringElement))
                      (MemberElement
                        (StringElement)
                        (ObjectElement
                          (MemberElement
                            (StringElement)
                            (MediaTypeElement
                              (MemberElement
                                (StringElement)
                                (StringElement))))))))))))
          (MemberElement
            (StringElement)
            (OperationElement
              (MemberElement
                (StringElement)
                (StringElement))
              (MemberElement
                (StringElement)
                (RequestBodyElement
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (MediaTypeElement
                          (MemberElement
                            (StringElement)
                            (SchemaElement
                              (MemberElement
                                (StringElement)
                                (StringElement))))))))))
              (MemberElement
                (StringElement)
                (ResponsesElement
                  (MemberElement
                    (StringElement)
                    (ResponseElement
                      (MemberElement
                        (StringElement)
                        (StringElement))))))))
          (MemberElement
            (StringElement)
            (ObjectElement
              (MemberElement
                (StringElement)
                (ObjectElement
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (ObjectElement
                          (MemberElement
                            (StringElement)
                            (StringElement))))))))))
          (MemberElement
            (StringElement)
            (ArrayElement
              (ParameterElement
                (MemberElement
                  (StringElement)
                  (StringElement))
                (MemberElement
                  (StringElement)
                  (StringElement))
                (MemberElement
                  (StringElement)
                  (SchemaElement
                    (MemberElement
                      (StringElement)
                      (StringElement))
                    (MemberElement
                      (StringElement)
                      (ObjectElement
                        (MemberElement
                          (StringElement)
                          (SchemaElement
                            (MemberElement
                              (StringElement)
                              (StringElement))
                            (MemberElement
                              (StringElement)
                              (ArrayElement
                                (StringElement)
                                (StringElement))))))))))))))))
  (MemberElement
    (StringElement)
    (ComponentsElement
      (MemberElement
        (StringElement)
        (ObjectElement
          (MemberElement
            (StringElement)
            (MediaTypeElement
              (MemberElement
                (StringElement)
                (SchemaElement
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (SchemaElement
                          (MemberElement
                            (StringElement)
                            (StringElement)))))))))))))))
`;

exports[`refractor integration OpenAPI 3.2.0 new features should support mediaTypes in Components 1`] = `
(OpenApi3_2Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ComponentsElement
      (MemberElement
        (StringElement)
        (ObjectElement
          (MemberElement
            (StringElement)
            (SchemaElement
              (MemberElement
                (StringElement)
                (StringElement))
              (MemberElement
                (StringElement)
                (ObjectElement
                  (MemberElement
                    (StringElement)
                    (SchemaElement
                      (MemberElement
                        (StringElement)
                        (StringElement))))
                  (MemberElement
                    (StringElement)
                    (SchemaElement
                      (MemberElement
                        (StringElement)
                        (StringElement))
                      (MemberElement
                        (StringElement)
                        (StringElement))))
                  (MemberElement
                    (StringElement)
                    (SchemaElement
                      (MemberElement
                        (StringElement)
                        (StringElement))))))))))
      (MemberElement
        (StringElement)
        (ObjectElement
          (MemberElement
            (StringElement)
            (MediaTypeElement
              (MemberElement
                (StringElement)
                (SchemaElement
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (SchemaElement
                          (MemberElement
                            (StringElement)
                            (StringElement))))
                      (MemberElement
                        (StringElement)
                        (SchemaElement
                          (MemberElement
                            (StringElement)
                            (StringElement))))))))
              (MemberElement
                (StringElement)
                (ObjectElement
                  (MemberElement
                    (StringElement)
                    (ExampleElement
                      (MemberElement
                        (StringElement)
                        (ObjectElement
                          (MemberElement
                            (StringElement)
                            (StringElement))
                          (MemberElement
                            (StringElement)
                            (StringElement))))))))))
          (MemberElement
            (StringElement)
            (MediaTypeElement
              (MemberElement
                (StringElement)
                (SchemaElement
                  (MemberElement
                    (StringElement)
                    (StringElement))))))
          (MemberElement
            (StringElement)
            (MediaTypeElement
              (MemberElement
                (StringElement)
                (SchemaElement
                  (MemberElement
                    (StringElement)
                    (StringElement))
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (SchemaElement
                          (MemberElement
                            (StringElement)
                            (StringElement))))
                      (MemberElement
                        (StringElement)
                        (SchemaElement
                          (MemberElement
                            (StringElement)
                            (StringElement))))))))))))))
  (MemberElement
    (StringElement)
    (PathsElement)))
`;

exports[`refractor integration OpenAPI 3.2.0 new features should support query operation in PathItem 1`] = `
(OpenApi3_2Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (PathsElement
      (MemberElement
        (StringElement)
        (PathItemElement
          (MemberElement
            (StringElement)
            (OperationElement
              (MemberElement
                (StringElement)
                (StringElement))
              (MemberElement
                (StringElement)
                (StringElement))
              (MemberElement
                (StringElement)
                (RequestBodyElement
                  (MemberElement
                    (StringElement)
                    (BooleanElement))
                  (MemberElement
                    (StringElement)
                    (ObjectElement
                      (MemberElement
                        (StringElement)
                        (MediaTypeElement
                          (MemberElement
                            (StringElement)
                            (SchemaElement
                              (MemberElement
                                (StringElement)
                                (StringElement))
                              (MemberElement
                                (StringElement)
                                (ObjectElement
                                  (MemberElement
                                    (StringElement)
                                    (SchemaElement
                                      (MemberElement
                                        (StringElement)
                                        (StringElement))))
                                  (MemberElement
                                    (StringElement)
                                    (SchemaElement
                                      (MemberElement
                                        (StringElement)
                                        (StringElement))
                                      (MemberElement
                                        (StringElement)
                                        (SchemaElement
                                          (MemberElement
                                            (StringElement)
                                            (StringElement))))))))))))))))
              (MemberElement
                (StringElement)
                (ResponsesElement
                  (MemberElement
                    (StringElement)
                    (ResponseElement
                      (MemberElement
                        (StringElement)
                        (StringElement))
                      (MemberElement
                        (StringElement)
                        (ObjectElement
                          (MemberElement
                            (StringElement)
                            (MediaTypeElement
                              (MemberElement
                                (StringElement)
                                (SchemaElement
                                  (MemberElement
                                    (StringElement)
                                    (StringElement))
                                  (MemberElement
                                    (StringElement)
                                    (SchemaElement
                                      (MemberElement
                                        (StringElement)
                                        (StringElement)))))))))))))))))))))
`;

exports[`refractor integration OpenAPI 3.2.0 new features should support querystring parameter location 1`] = `
(OpenApi3_2Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (PathsElement
      (MemberElement
        (StringElement)
        (PathItemElement
          (MemberElement
            (StringElement)
            (OperationElement
              (MemberElement
                (StringElement)
                (ArrayElement
                  (ParameterElement
                    (MemberElement
                      (StringElement)
                      (StringElement))
                    (MemberElement
                      (StringElement)
                      (StringElement))
                    (MemberElement
                      (StringElement)
                      (StringElement))
                    (MemberElement
                      (StringElement)
                      (SchemaElement
                        (MemberElement
                          (StringElement)
                          (StringElement))
                        (MemberElement
                          (StringElement)
                          (ObjectElement
                            (MemberElement
                              (StringElement)
                              (SchemaElement
                                (MemberElement
                                  (StringElement)
                                  (StringElement))))
                            (MemberElement
                              (StringElement)
                              (SchemaElement
                                (MemberElement
                                  (StringElement)
                                  (StringElement))))
                            (MemberElement
                              (StringElement)
                              (SchemaElement
                                (MemberElement
                                  (StringElement)
                                  (StringElement))))
                            (MemberElement
                              (StringElement)
                              (SchemaElement
                                (MemberElement
                                  (StringElement)
                                  (StringElement)))))))))))
              (MemberElement
                (StringElement)
                (ResponsesElement
                  (MemberElement
                    (StringElement)
                    (ResponseElement
                      (MemberElement
                        (StringElement)
                        (StringElement)))))))))))))
`;
